--- a/auth.html
+++ b/auth.html
@@ -11,7 +11,7 @@
     <header class="page-header">
       <div class="container">
         <div class="page-header__wrap">
-          <div class="logo"><a class="logo__link" href="#">
+          <div class="logo"><a class="logo__link" href="/">
               <svg width="120" height="40" viewBox="0 0 120 40" fill="none" xmlns="http://www.w3.org/2000/svg">
                 <g id="logo__text" display="block"> 
                   <path class="logo__letter" fill="#1F2041" d="M62.335 13.368C62.5567 13.368 62.7375 13.4438 62.8775 13.5955C63.0292 13.7355 63.105 13.9163 63.105 14.138C63.105 14.348 63.0292 14.5288 62.8775 14.6805C62.7375 14.8322 62.5567 14.908 62.335 14.908H58.5725V25.408C58.5725 25.6297 58.4967 25.8163 58.345 25.968C58.205 26.108 58.0242 26.178 57.8025 26.178C57.5925 26.178 57.4117 26.108 57.26 25.968C57.1083 25.8163 57.0325 25.6297 57.0325 25.408V14.908H53.27C53.06 14.908 52.8792 14.8322 52.7275 14.6805C52.5758 14.5288 52.5 14.348 52.5 14.138C52.5 13.9163 52.5758 13.7355 52.7275 13.5955C52.8792 13.4438 53.06 13.368 53.27 13.368H62.335Z"></path>
@@ -40,11 +40,12 @@
                   </linearGradient>
                 </defs>
               </svg></a></div>
-          <div class="main-menu">
+          <div class="main-menu" id="mainMenu">
             <div class="main-menu__burger-icon" id="mainMenuBurgerIcon"><span></span><span></span><span></span></div>
             <nav>
               <ul class="main-menu__list">
-                <li class="main-menu__item"><a href="#">О нас</a></li>
+                <li class="main-menu__item"><a href="#">О нас</a>
+                </li>
                 <li class="main-menu__item  main-menu__item--sub-menu"><a href="#">Услуги</a>
                   <ul class="main-menu__sub-menu">
                     <li class="main-menu__sub-item"><a href="#">Подбор отелей</a></li>
@@ -52,8 +53,10 @@
                     <li class="main-menu__sub-item"><a href="#">Рейтинг отелей</a></li>
                   </ul>
                 </li>
-                <li class="main-menu__item"><a href="#">Вакансии</a></li>
-                <li class="main-menu__item"><a href="#">Новости</a></li>
+                <li class="main-menu__item"><a href="#">Вакансии</a>
+                </li>
+                <li class="main-menu__item"><a href="#">Новости</a>
+                </li>
                 <li class="main-menu__item  main-menu__item--sub-menu"><a href="#">Соглашения</a>
                   <ul class="main-menu__sub-menu">
                     <li class="main-menu__sub-item"><a href="#">Пользовательские</a></li>
@@ -63,12 +66,12 @@
               </ul>
             </nav>
           </div>
-          <section class="page-header__auth"><a class="button  button--empty-style" href="#">Войти</a><a class="button" href="#">Зарегистрироваться</a>
-            <ul class="page-header__auth-list">
-              <li class="page-header__auth-item"><a href="#">Войти</a></li>
-              <li class="page-header__auth-item"><a href="#">Зарегистрироваться</a></li>
+          <section class="page-header__auth"><a class="button  button--empty-style" href="/auth.html">Войти</a><a class="button" href="/registration.html">Зарегистрироваться</a>
+            <ul class="page-header__auth-list" id="authListId">
+              <li class="page-header__auth-item"><a href="/auth.html">Войти</a></li>
+              <li class="page-header__auth-item"><a href="/registration.html">Зарегистрироваться</a></li>
             </ul>
-            <button class="page-header__auth-profile" id="authProfile" type="button"></button>
+            <button class="page-header__auth-profile" id="authButton" type="button"></button>
           </section>
         </div>
       </div>
@@ -91,7 +94,7 @@
                 <button class="button  button--icon" type="submit">Войти</button>
               </form>
               <div class="auth-card__account-enter">
-                <p>Нет аккаунта на Toxin?</p><a class="button  button--empty-style" href="#">Создать</a>
+                <p>Нет аккаунта на Toxin?</p><a class="button  button--empty-style" href="/registration.html">Создать</a>
               </div>
             </div>
           </div>
@@ -103,7 +106,7 @@
         <div class="page-footer__wrap">
           <div class="page-footer__content">
             <div class="page-footer__col  page-footer__col--large">
-              <div class="logo"><a class="logo__link" href="#">
+              <div class="logo"><a class="logo__link" href="/">
                   <svg width="120" height="40" viewBox="0 0 120 40" fill="none" xmlns="http://www.w3.org/2000/svg">
                     <g id="logo__text" display="block"> 
                       <path class="logo__letter" fill="#1F2041" d="M62.335 13.368C62.5567 13.368 62.7375 13.4438 62.8775 13.5955C63.0292 13.7355 63.105 13.9163 63.105 14.138C63.105 14.348 63.0292 14.5288 62.8775 14.6805C62.7375 14.8322 62.5567 14.908 62.335 14.908H58.5725V25.408C58.5725 25.6297 58.4967 25.8163 58.345 25.968C58.205 26.108 58.0242 26.178 57.8025 26.178C57.5925 26.178 57.4117 26.108 57.26 25.968C57.1083 25.8163 57.0325 25.6297 57.0325 25.408V14.908H53.27C53.06 14.908 52.8792 14.8322 52.7275 14.6805C52.5758 14.5288 52.5 14.348 52.5 14.138C52.5 13.9163 52.5758 13.7355 52.7275 13.5955C52.8792 13.4438 53.06 13.368 53.27 13.368H62.335Z"></path>
