--- a/cards.html
+++ b/cards.html
@@ -38,8 +38,7 @@
                       <p class="input-group__label" id="for-number-guests-input">Гости</p>
                       <div class="input-group__input  input-group__input--fake  input-group__input--icon  input-group__button-split--down-animation" id="number-guests-input">Сколько гостей</div>
                     </div>
-                    <div class="drop-down-container" id="drop-down-container"></div>
-                    <button class="button  button--icon" type="submit">Подобрать номер</button>
+                    <div class="drop-down-container" id="drop-down-container"></div><a class="button  button--icon" href="/rooms.html">Подобрать номер</a>
                   </fieldset>
                 </form>
               </div>
@@ -92,7 +91,7 @@
                   <button class="button  button--icon" type="submit">Перейти к оплате</button>
                 </form>
                 <div class="register-card__account-enter">
-                  <p>Уже есть аккаунт на Toxin</p><a class="button  button--empty-style" href="#">Войти</a>
+                  <p>Уже есть аккаунт на Toxin</p><a class="button  button--empty-style" href="/auth.html">Войти</a>
                 </div>
               </div>
             </div>
@@ -164,7 +163,7 @@
                   <button class="button  button--icon" type="submit">Войти</button>
                 </form>
                 <div class="auth-card__account-enter">
-                  <p>Нет аккаунта на Toxin?</p><a class="button  button--empty-style" href="#">Создать</a>
+                  <p>Нет аккаунта на Toxin?</p><a class="button  button--empty-style" href="/registration.html">Создать</a>
                 </div>
               </div>
             </div>
@@ -267,7 +266,7 @@
                 </div>
                 <div class="hotel-card__info">
                   <div class="hotel-card__info-item">
-                    <h2 class="hotel-card__title">№ <span>888</span> <b>люкс</b></h2>
+                    <h2 class="hotel-card__title"> <a href="/room-details.html">№ <span>888</span> <b>люкс</b></a></h2>
                     <p class="hotel-card__text"><b>9 900₽</b> в сутки</p>
                   </div>
                   <div class="hotel-card__info-item">
@@ -310,7 +309,7 @@
                 </div>
                 <div class="hotel-card__info">
                   <div class="hotel-card__info-item">
-                    <h2 class="hotel-card__title">№ <span>840</span></h2>
+                    <h2 class="hotel-card__title"><a href="/room-details.html">№ <span>840</span></a></h2>
                     <p class="hotel-card__text"><b>9 900₽</b> в сутки</p>
                   </div>
                   <div class="hotel-card__info-item">
