--- a/headers-and-footers.html
+++ b/headers-and-footers.html
@@ -7,7 +7,7 @@
     <title>Toxin - шапки и подвалы!</title>
   </head>
   <body class="headers-and-footers">
-    <div class="logo logo--big"><img width="48" height="48" src="2645e4d9a01c411e1d094ebdb0889189.png" alt="toxin"/></div>
+    <div class="logo logo--big"><img width="48" height="48" src="https://dywork.github.io/toxin/2645e4d9a01c411e1d094ebdb0889189.png" alt="toxin"/></div>
     <div class="headers-and-footers__wrap">
       <div class="headers-and-footers__item">
         <header class="page-header">
@@ -227,7 +227,7 @@
                     <div class="input-group">
                       <p class="input-group__split">
                         <input class="input-group__input  input-group__input--button-split" id="undefined" type="email" placeholder="Your email address"/>
-                        <button class="input-group__button-split  input-group__button-split--right-animation" id="undefined" type="button"><img src="8db3d80a75739a8d251fa3df656f2a76.svg" alt=""/></button>
+                        <button class="input-group__button-split  input-group__button-split--right-animation" id="undefined" type="button"><img src="https://dywork.github.io/toxin/8db3d80a75739a8d251fa3df656f2a76.svg" alt=""/></button>
                       </p>
                     </div>
                   </div>
@@ -319,5 +319,5 @@
         </footer>
       </div>
     </div>
-  <script type="text/javascript" src="headers-and-footers.bundle.js"></script></body>
+  <script type="text/javascript" src="https://dywork.github.io/toxin/headers-and-footers.bundle.js"></script></body>
 </html>
