--- a/rooms.html
+++ b/rooms.html
@@ -219,7 +219,7 @@
                   <section class="hotel-card">
                     <div class="hotel-card__wrap">
                       <div class="hotel-card__slider">
-                        <div class="hotel-card__slider-pict"><img src="d005b0d4bcf8f79fb9d940a65a017ede.png" alt="Красивый отель"/>
+                        <div class="hotel-card__slider-pict"><img src="https://dywork.github.io/toxin/d005b0d4bcf8f79fb9d940a65a017ede.png" alt="Красивый отель"/>
                         </div>
                         <div class="hotel-card__slider-pict-buttons">
                           <button class="slider-btn-active" type="button"></button>
@@ -264,7 +264,7 @@
                   <section class="hotel-card">
                     <div class="hotel-card__wrap">
                       <div class="hotel-card__slider">
-                        <div class="hotel-card__slider-pict"><img src="9aab5f0deef24e327054dd632930190f.png" alt="Красивый отель"/>
+                        <div class="hotel-card__slider-pict"><img src="https://dywork.github.io/toxin/9aab5f0deef24e327054dd632930190f.png" alt="Красивый отель"/>
                         </div>
                         <div class="hotel-card__slider-pict-buttons">
                           <button class="slider-btn-active" type="button"></button>
@@ -309,7 +309,7 @@
                   <section class="hotel-card">
                     <div class="hotel-card__wrap">
                       <div class="hotel-card__slider">
-                        <div class="hotel-card__slider-pict"><img src="3fce6863140bbbb7aee421145b8efd0b.png" alt="Красивый отель"/>
+                        <div class="hotel-card__slider-pict"><img src="https://dywork.github.io/toxin/3fce6863140bbbb7aee421145b8efd0b.png" alt="Красивый отель"/>
                         </div>
                         <div class="hotel-card__slider-pict-buttons">
                           <button class="slider-btn-active" type="button"></button>
@@ -354,7 +354,7 @@
                   <section class="hotel-card">
                     <div class="hotel-card__wrap">
                       <div class="hotel-card__slider">
-                        <div class="hotel-card__slider-pict"><img src="680a3643b0da886d41e34b9530e5318a.png" alt="Красивый отель"/>
+                        <div class="hotel-card__slider-pict"><img src="https://dywork.github.io/toxin/680a3643b0da886d41e34b9530e5318a.png" alt="Красивый отель"/>
                         </div>
                         <div class="hotel-card__slider-pict-buttons">
                           <button class="slider-btn-active" type="button"></button>
@@ -399,7 +399,7 @@
                   <section class="hotel-card">
                     <div class="hotel-card__wrap">
                       <div class="hotel-card__slider">
-                        <div class="hotel-card__slider-pict"><img src="0025b38215b474ca5fb27fad14d66381.png" alt="Красивый отель"/>
+                        <div class="hotel-card__slider-pict"><img src="https://dywork.github.io/toxin/0025b38215b474ca5fb27fad14d66381.png" alt="Красивый отель"/>
                         </div>
                         <div class="hotel-card__slider-pict-buttons">
                           <button class="slider-btn-active" type="button"></button>
@@ -444,7 +444,7 @@
                   <section class="hotel-card">
                     <div class="hotel-card__wrap">
                       <div class="hotel-card__slider">
-                        <div class="hotel-card__slider-pict"><img src="c7690a7d55bb0de9ffc0de29a5cc6f43.png" alt="Красивый отель"/>
+                        <div class="hotel-card__slider-pict"><img src="https://dywork.github.io/toxin/c7690a7d55bb0de9ffc0de29a5cc6f43.png" alt="Красивый отель"/>
                         </div>
                         <div class="hotel-card__slider-pict-buttons">
                           <button class="slider-btn-active" type="button"></button>
@@ -489,7 +489,7 @@
                   <section class="hotel-card">
                     <div class="hotel-card__wrap">
                       <div class="hotel-card__slider">
-                        <div class="hotel-card__slider-pict"><img src="8e28fb0017078dcf3f40850ba1263d8d.png" alt="Красивый отель"/>
+                        <div class="hotel-card__slider-pict"><img src="https://dywork.github.io/toxin/8e28fb0017078dcf3f40850ba1263d8d.png" alt="Красивый отель"/>
                         </div>
                         <div class="hotel-card__slider-pict-buttons">
                           <button class="slider-btn-active" type="button"></button>
@@ -534,7 +534,7 @@
                   <section class="hotel-card">
                     <div class="hotel-card__wrap">
                       <div class="hotel-card__slider">
-                        <div class="hotel-card__slider-pict"><img src="8213c86a14b4ed6944c4a2b7ef32cc38.png" alt="Красивый отель"/>
+                        <div class="hotel-card__slider-pict"><img src="https://dywork.github.io/toxin/8213c86a14b4ed6944c4a2b7ef32cc38.png" alt="Красивый отель"/>
                         </div>
                         <div class="hotel-card__slider-pict-buttons">
                           <button class="slider-btn-active" type="button"></button>
@@ -579,7 +579,7 @@
                   <section class="hotel-card">
                     <div class="hotel-card__wrap">
                       <div class="hotel-card__slider">
-                        <div class="hotel-card__slider-pict"><img src="6ed3d840a53cc7f60fb120b30b103b85.png" alt="Красивый отель"/>
+                        <div class="hotel-card__slider-pict"><img src="https://dywork.github.io/toxin/6ed3d840a53cc7f60fb120b30b103b85.png" alt="Красивый отель"/>
                         </div>
                         <div class="hotel-card__slider-pict-buttons">
                           <button class="slider-btn-active" type="button"></button>
@@ -624,7 +624,7 @@
                   <section class="hotel-card">
                     <div class="hotel-card__wrap">
                       <div class="hotel-card__slider">
-                        <div class="hotel-card__slider-pict"><img src="fd76afef027ce0f5274f0b60736de4c5.png" alt="Красивый отель"/>
+                        <div class="hotel-card__slider-pict"><img src="https://dywork.github.io/toxin/fd76afef027ce0f5274f0b60736de4c5.png" alt="Красивый отель"/>
                         </div>
                         <div class="hotel-card__slider-pict-buttons">
                           <button class="slider-btn-active" type="button"></button>
@@ -669,7 +669,7 @@
                   <section class="hotel-card">
                     <div class="hotel-card__wrap">
                       <div class="hotel-card__slider">
-                        <div class="hotel-card__slider-pict"><img src="882d81674539dbe47affaf7a904feb5e.png" alt="Красивый отель"/>
+                        <div class="hotel-card__slider-pict"><img src="https://dywork.github.io/toxin/882d81674539dbe47affaf7a904feb5e.png" alt="Красивый отель"/>
                         </div>
                         <div class="hotel-card__slider-pict-buttons">
                           <button class="slider-btn-active" type="button"></button>
@@ -714,7 +714,7 @@
                   <section class="hotel-card">
                     <div class="hotel-card__wrap">
                       <div class="hotel-card__slider">
-                        <div class="hotel-card__slider-pict"><img src="6d84042b2add6205993b1dd58e69d6d9.png" alt="Красивый отель"/>
+                        <div class="hotel-card__slider-pict"><img src="https://dywork.github.io/toxin/6d84042b2add6205993b1dd58e69d6d9.png" alt="Красивый отель"/>
                         </div>
                         <div class="hotel-card__slider-pict-buttons">
                           <button class="slider-btn-active" type="button"></button>
@@ -865,7 +865,7 @@
                 <div class="input-group">
                   <p class="input-group__split">
                     <input class="input-group__input  input-group__input--button-split" id="undefined" type="email" placeholder="Email"/>
-                    <button class="input-group__button-split  input-group__button-split--right-animation" id="undefined" type="button"><img src="8db3d80a75739a8d251fa3df656f2a76.svg" alt=""/></button>
+                    <button class="input-group__button-split  input-group__button-split--right-animation" id="undefined" type="button"><img src="https://dywork.github.io/toxin/8db3d80a75739a8d251fa3df656f2a76.svg" alt=""/></button>
                   </p>
                 </div>
               </div>
@@ -895,5 +895,5 @@
         </div>
       </div>
     </footer>
-  <script type="text/javascript" src="rooms.bundle.js"></script></body>
+  <script type="text/javascript" src="https://dywork.github.io/toxin/rooms.bundle.js"></script></body>
 </html>
